Fixed overflow, adjusted some minor things.

--- a/internify/src/old-components/organisms/styles/FooterHomeGuest.css
+++ b/internify/src/old-components/organisms/styles/FooterHomeGuest.css
@@ -10,6 +10,7 @@
       rgba(255, 255, 255, 0) 70.47%
     ),
     #043a74;
+  overflow: hidden;
 }
 
 .footer_home_guest_left {
